# kotti_py312

./: .gitignore  README.md  check_line.py
.github/workflows/: mysql.yml  postgres.yml  publish.yml  sqlite.yml
Kotti/: CHANGES.txt  README.rst  development.ini  pytest.ini  requirements.txt  setup.py  test.ini  tox.ini
Kotti/.github/workflows/: mysql.yml  postgres.yml  publish.yml  sqlite.yml
Kotti/docs/: conf.py
Kotti/kotti/: __init__.py  compat.py  events.py  filedepot.py  interfaces.py  migrate.py  resources.py  sanitizers.py  sqla.py  traversal.py  util.py
Kotti/kotti/tests/: __init__.py  test_app.py  test_embedded_page.py  test_file.py  test_functional.py  test_migrate.py  test_sqla.py
Kotti/kotti/views/: util.py  view.py
ai-community-frontend/: PROJECT_GUIDE.md  README.md  index.html  package.json  start.bat  tsconfig.app.json  vite.config.ts
ai-community-frontend/src/: App.vue
ai-community-frontend/src/api/: auth.ts  ideas.ts  request.ts
ai-community-frontend/src/router/: index.ts
ai-community-frontend/src/stores/: ai.ts  idea.ts  user.ts
ai-community-frontend/src/types/: index.ts
ai-community-frontend/src/utils/: g4f-client.ts
ai-community-frontend/src/views/: AIAssistantView.vue  CreateIdeaView.vue  CreateResourceView.vue  HomeView.vue  IdeaDetailView.vue  IdeasView.vue  LoginView.vue  NotFoundView.vue  ProfileView.vue  RegisterView.vue  ResourceDetailView.vue  ResourcesView.vue  SettingsView.vue
kotti_ai_community/: CHANGES.rst  MANIFEST.in  README.rst  development.ini  install.bat  install.sh  run_server.bat  setup.py
kotti_ai_community/kotti_ai_community/: __init__.py  resources.py
kotti_ai_community/kotti_ai_community/alembic/: env.py
kotti_g4f/: .gitignore  .gitlab-ci.yml  CHANGES.rst  Dockerfile  MANIFEST.in  README.rst  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
kotti_g4f/.github/: dependabot.yml
kotti_g4f/.github/workflows/: ci.yml  publish.yml
kotti_g4f/kotti_g4f/: __init__.py  alembic.ini  interfaces.py  resources.py  views.py
kotti_g4f/kotti_g4f/alembic/: env.py
kotti_g4f/kotti_g4f/alembic/versions/: 001_add_g4f_chats.py  __init__.py
kotti_g4f/kotti_g4f/templates/: chat.pt  chat_content.pt
kotti_g4f/kotti_g4f/tests/: conftest.py  test_views.py
kotti_g4f/kotti_g4f/views/: __init__.py  add.py  view.py
kotti_image/: CHANGES.rst  README.rst  pytest.ini  setup.py
kotti_tinymce/: CHANGES.txt  MANIFEST.in  README.rst  pytest.ini  setup.py
(+26 files in other folders)
