[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kotti2_g4f"
version = "3.0.0"
description = "GPT4Free integration for Kotti2 CMS - Add AI chat content type"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Kotti Developers", email = "kotti@googlegroups.com"}
]
keywords = ["kotti", "kotti2", "gpt4free", "ai", "chat", "gpt", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "Kotti2>=3.0.0,<4.0.0",
    "g4f>=0.3.0,<1.0.0",
]

[project.optional-dependencies]
testing = [
    "WebTest>=3.0.0",
    "mock>=5.0.0",
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0",
    "zope.testbrowser>=5.0.0,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/Kotti/kotti2_g4f"
Documentation = "https://github.com/Kotti/kotti2_g4f#readme"
Repository = "https://github.com/Kotti/kotti2_g4f.git"
Issues = "https://github.com/Kotti/kotti2_g4f/issues"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["kotti_g4f/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["kotti_g4f"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
